
2008-10-01 tdb
 * Added map() method to Import objects to apply a method to all imported
    objects
 * Now calls set_eprint_import_automatic_fields for every eprint imported
    via an import object
 * Removed redundant DataObj::get_gid() method (replaced by uri())
 * Removed redundant DataObj::get_mime_type()
 * Fixed undef warning on rendering undefined value in MetaField::Email
 * Moved duplicated commit() commit in DataObj subclasses to DataObj

2008-10-14 cjg
 * Added javascript constants to the top of auto.js for things like the base
    URL path. This fixes issues with the image path in the lightbox code.

2008-10-14 cjg
 * Added "Navigation Aids" to the sub-menus in views in addition to the leaf
    pages.
 * Correctly set /view files to be utf-8 to fix "wide character" warnings.
 * Fixed navigation aids to correctly link to subjects in a sub-menu, which
    required a new mode (4) to $session->render_subjects
 * Added code to generate_views to report an error if an illegal view id is
    passed as an option.
 * Added warning to Subjects about subjects with non-existant parents.
 * Added "root" subject to Subject->get_all
 * Added "up a level" to browsing multi level views.

2008-10-14 cjg
 * Fixed minor bug in Component::Upload which prevented it working with zero
    fields from the document.

2008-10-14 cjg
 * Fixed honeycomb plugin to not cause problems if the honeycomb module is 
    not installed.

2008-10-14 cjg
 * Added feature to phrase editor so it can be called with a limited list of
    phrase id's -- for planned by-page phrase editing.

2008-10-14 tdb
 * If a format doesn't have an icon use it's major mime type icon, or unknown

2008-10-15 cjg
 * Added dates to UKETD export plugin. Resolving #3445.

2008-10-15 cjg
 * Changed URL fields to be TEXT not VARCHAR(255). These are *not* a subclass
    of "Longtext", the only change is to storage. This will only impact newly
    created fields. Resolving #3436.
