@@ -7805,3 +7805,6 @@ EPRINTS-3.1-beta-2
     of "Longtext", the only change is to storage. This will only impact newly
     created fields. Resolving #3436.
 
+2008-10-15 cjg
+ * Fixed "up a level" to link correctly.
+ * Removed the "navigation aids" from the .include files.
